[metadata]
name = FlussTools
version = 0.1
license = BSD 3-Clause License
description = Contents for the book.
author =Sebastian Schwindt, Beatriz Negreiros, Kilian Mouris, Kenneth Larrieu, Lukas Schoeberl
url = https://github.com/Ecohydraulics/flusstools
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: BSD 3-Clause License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = FlussTeam
github_repo = flusstools